Change per_page to page_size, update swagger and login permission error.
